feat(Lotto) : 생성시 정렬 기능 구현